--- a/前台/index.html
+++ b/前台/index.html
@@ -69,19 +69,19 @@
 			<div class="am-g">
 				<div class="am-u-sm-4 health_content">
 					<a href="health_content.html">
-						<div class="health_img"><img src="images/health1.jpg" class="health_image"></div>		
+						<div class="health_img"><img src="images/health1.jpg" class="health_image1"></div>		
 						<div>金秋美蟹正当时</div>
 					</a>
 				</div>
 				<div class="am-u-sm-4 health_content">
 					<a href="health_content.html">
-						<div class="health_img"><img src="images/health2.jpg" class="health_image"></div>		
+						<div class="health_img"><img src="images/health2.jpg" class="health_image1"></div>		
 						<div>金秋美蟹正当时</div>
 					</a>
 				</div>
 				<div class="am-u-sm-4 health_content">
 					<a href="health_content.html">
-						<div class="health_img"><img src="images/health3.jpg" class="health_image"></div>		
+						<div class="health_img"><img src="images/health3.jpg" class="health_image1"></div>		
 						<div>金秋美蟹正当时</div>
 					</a>
 				</div>
@@ -105,37 +105,37 @@
 			<div class="am-g" id="shuiguo">
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/apple.jpg" class="health_image"></div>
+						<div class="kitchen_img"><img src="images/apple.jpg" class="health_image2"></div>
 						<div>苹果</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/pineapple.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/pineapple.jpg" class="health_image2"></div>	
 						<div>菠萝</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/strawberry.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/strawberry.jpg" class="health_image2"></div>	
 						<div>草莓</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/orange.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/orange.jpg" class="health_image2"></div>	
 						<div>橙子</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/grapes.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/grapes.jpg" class="health_image2"></div>	
 						<div>葡萄</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/peach.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/peach.jpg" class="health_image2"></div>	
 						<div>桃</div>
 					</a>
 				</div>
@@ -144,37 +144,37 @@
 			<div class="am-g" id="haixian">
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/lobster.jpg" class="health_image"></div>
+						<div class="kitchen_img"><img src="images/lobster.jpg" class="health_image2"></div>
 						<div>龙虾</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/crab.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/crab.jpg" class="health_image2"></div>	
 						<div>螃蟹</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/salmon.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/salmon.jpg" class="health_image2"></div>	
 						<div>三文鱼</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/non.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/non.jpg" class="health_image2"></div>	
 						<div>海蛎</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/octopus.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/octopus.jpg" class="health_image2"></div>	
 						<div>章鱼</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/fish.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/fish.jpg" class="health_image2"></div>	
 						<div>鱼类</div>
 					</a>
 				</div>
@@ -183,37 +183,37 @@
 			<div class="am-g" id="shucai" >
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/cucumber.jpg" class="health_image"></div>
+						<div class="kitchen_img"><img src="images/cucumber.jpg" class="health_image2"></div>
 						<div>黄瓜</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/carrots.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/carrots.jpg" class="health_image2"></div>	
 						<div>胡萝卜</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/peppers.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/peppers.jpg" class="health_image2"></div>	
 						<div>青椒</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/potatoes.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/potatoes.jpg" class="health_image2"></div>	
 						<div>土豆</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/tomato.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/tomato.jpg" class="health_image2"></div>	
 						<div>西红柿</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/onions.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/onions.jpg" class="health_image2"></div>	
 						<div>洋葱</div>
 					</a>
 				</div>
@@ -222,37 +222,37 @@
 			<div class="am-g" id="wugu" >
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/redjujube.jpg" class="health_image"></div>
+						<div class="kitchen_img"><img src="images/redjujube.jpg" class="health_image2"></div>
 						<div>红枣</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/melonseeds.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/melonseeds.jpg" class="health_image2"></div>	
 						<div>瓜子</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/plum.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/plum.jpg" class="health_image2"></div>	
 						<div>话梅</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/walnut.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/walnut.jpg" class="health_image2"></div>	
 						<div>核桃</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/wheat.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/wheat.jpg" class="health_image2"></div>	
 						<div>小麦</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/peanuts.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/peanuts.jpg" class="health_image2"></div>	
 						<div>花生米</div>
 					</a>
 				</div>
@@ -261,37 +261,37 @@
 			<div class="am-g" id="qinlei" >
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/duck.jpg" class="health_image"></div>
+						<div class="kitchen_img"><img src="images/duck.jpg" class="health_image2"></div>
 						<div>鸭</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/goose.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/goose.jpg" class="health_image2"></div>	
 						<div>鹅</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/fish.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/fish.jpg" class="health_image2"></div>	
 						<div>鱼</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/cock.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/cock.jpg" class="health_image2"></div>	
 						<div>鸡</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/cow.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/cow.jpg" class="health_image2"></div>	
 						<div>牛</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/donkey.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/donkey.jpg" class="health_image2"></div>	
 						<div>驴</div>
 					</a>
 				</div>
@@ -300,37 +300,37 @@
 			<div class="am-g" id="yinpin" >
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/coffee.jpg" class="health_image"></div>
+						<div class="kitchen_img"><img src="images/coffee.jpg" class="health_image2"></div>
 						<div>咖啡</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/milk.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/milk.jpg" class="health_image2"></div>	
 						<div>牛奶</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/juice.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/juice.jpg" class="health_image2"></div>	
 						<div>橙汁</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/kele.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/kele.jpg" class="health_image2"></div>	
 						<div>可乐</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/water.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/water.jpg" class="health_image2"></div>	
 						<div>水</div>
 					</a>
 				</div>
 				<div class="am-u-sm-2 health_content">
 					<a href="kitchen_content.html">
-						<div class="kitchen_img"><img src="images/wine.jpg" class="health_image"></div>	
+						<div class="kitchen_img"><img src="images/wine.jpg" class="health_image2"></div>	
 						<div>酒</div>
 					</a>
 				</div>
