--- a/前台/restaurant_list.html
+++ b/前台/restaurant_list.html
@@ -93,45 +93,47 @@
 						<div class="am-u-sm-9 restaurant_list_page_img_content"><p>鸡公煲是重庆烧鸡公和重庆干锅鸡在外地的杂交变种菜品。以浓香滑嫩，入味彻底，形式新颖见长，口味可根据各地需要可调，分微辣、中辣、重辣各味型。</p><p>浓香滑嫩，入味彻底，特点麻辣鲜香，口感醇厚，香辛料味渗入鸡块中，食后令人回味无穷，口味可根据各地需要可调,分微辣、中辣、重辣各味型。</p></div>
 					</div>
 				</div>
-				<div class="restaurant_list_page_title2">店家特色菜谱</div>
-					<div class="swiper-container" style="margin-top:10px;">
+				
+
+				<div class="swiper-container" style="margin-top:10px">
+						<div class="swiper-button-prev"></div>
+						<div class="swiper-button-next"></div>
 		                <div class="swiper-wrapper">
-		                    <div class="swiper-slide" style="background:white;height:400px">
+		                	
+		                    <div class="swiper-slide" style="background:white;height:380px">
 		                        <div class="restaurant_list_page_dianjiatesecaipu_div"><a href="restaurant_content.html">
-									<div class="restaurant_list_page_dianjiatesecaipu_div1"><img src="images/cangzhou.jpg" class="restaurant_list_page_dianjiatesecaipu_img" style="margin-top:25px;"></div>
+									<div class="restaurant_list_page_dianjiatesecaipu_div1"><img src="images/cangzhou.jpg" class="restaurant_list_page_dianjiatesecaipu_img" style="margin-top:0 auto;"></div>
 									<div class="restaurant_list_page_dianjiatesecaipu_div2"><h2>沧州火锅鸡</h2><p>沧州火锅鸡是一道色香味俱全的汉族名菜，属于冀菜系。此菜起源于河北省沧州市。以菜鸡，番茄，豆瓣酱，大蒜，大料，辣椒为料制作而成。食川沧州麻辣火锅鸡为主要代表，味道麻辣鲜香。</p></div></a>
 								</div>
 								<div class="restaurant_list_page_dianjiatesecaipu_div"><a href="restaurant_content.html">
-									<div class="restaurant_list_page_dianjiatesecaipu_div1"><img src="images/malaxiangguo.jpg" class="restaurant_list_page_dianjiatesecaipu_img" style="margin-top:25px;"></div>
+									<div class="restaurant_list_page_dianjiatesecaipu_div1"><img src="images/malaxiangguo.jpg" class="restaurant_list_page_dianjiatesecaipu_img" style="margin-top:0 auto;margin-top:-16px"></div>
 									<div class="restaurant_list_page_dianjiatesecaipu_div2"><h2>麻辣香锅</h2><p>麻辣香锅发源于重庆缙云山，由川渝地方麻辣风味融合而来，麻辣香锅源于土家风味，是当地老百姓的家常做法，以麻、辣、鲜、香、油、混搭为特点。</p></div></a>
 								</div>
 		                    </div>   
-		                    <div class="swiper-slide" style="background:white;height:400px">
+		                    <div class="swiper-slide" style="background:white;height:380px">
 		                        <div class="restaurant_list_page_dianjiatesecaipu_div"><a href="restaurant_content.html">
-									<div class="restaurant_list_page_dianjiatesecaipu_div1"><img src="images/cangzhou.jpg" class="restaurant_list_page_dianjiatesecaipu_img" style="margin-top:25px;"></div>
+									<div class="restaurant_list_page_dianjiatesecaipu_div1"><img src="images/cangzhou.jpg" class="restaurant_list_page_dianjiatesecaipu_img" style="margin-top:0 auto;"></div>
 									<div class="restaurant_list_page_dianjiatesecaipu_div2"><h2>沧州火锅鸡</h2><p>沧州火锅鸡是一道色香味俱全的汉族名菜，属于冀菜系。此菜起源于河北省沧州市。以菜鸡，番茄，豆瓣酱，大蒜，大料，辣椒为料制作而成。食川沧州麻辣火锅鸡为主要代表，味道麻辣鲜香。</p></div></a>
 								</div>
 								<div class="restaurant_list_page_dianjiatesecaipu_div"><a href="restaurant_content.html">
-									<div class="restaurant_list_page_dianjiatesecaipu_div1"><img src="images/malaxiangguo.jpg" class="restaurant_list_page_dianjiatesecaipu_img" style="margin-top:25px;"></div>
+									<div class="restaurant_list_page_dianjiatesecaipu_div1"><img src="images/malaxiangguo.jpg" class="restaurant_list_page_dianjiatesecaipu_img" style="margin-top:0 auto;margin-top:-16px"></div>
 									<div class="restaurant_list_page_dianjiatesecaipu_div2"><h2>麻辣香锅</h2><p>麻辣香锅发源于重庆缙云山，由川渝地方麻辣风味融合而来，麻辣香锅源于土家风味，是当地老百姓的家常做法，以麻、辣、鲜、香、油、混搭为特点。</p></div></a>
 								</div>
 		                    </div>
-		                    <div class="swiper-slide" style="background:white;height:400px">
+		                    <div class="swiper-slide" style="background:white;height:380px">
 		                        <div class="restaurant_list_page_dianjiatesecaipu_div"><a href="restaurant_content.html">
-									<div class="restaurant_list_page_dianjiatesecaipu_div1"><img src="images/cangzhou.jpg" class="restaurant_list_page_dianjiatesecaipu_img" style="margin-top:25px;"></div>
+									<div class="restaurant_list_page_dianjiatesecaipu_div1"><img src="images/cangzhou.jpg" class="restaurant_list_page_dianjiatesecaipu_img" style="margin-top:0 auto;"></div>
 									<div class="restaurant_list_page_dianjiatesecaipu_div2"><h2>沧州火锅鸡</h2><p>沧州火锅鸡是一道色香味俱全的汉族名菜，属于冀菜系。此菜起源于河北省沧州市。以菜鸡，番茄，豆瓣酱，大蒜，大料，辣椒为料制作而成。食川沧州麻辣火锅鸡为主要代表，味道麻辣鲜香。</p></div></a>
 								</div>
 								<div class="restaurant_list_page_dianjiatesecaipu_div"><a href="restaurant_content.html">
-									<div class="restaurant_list_page_dianjiatesecaipu_div1"><img src="images/malaxiangguo.jpg" class="restaurant_list_page_dianjiatesecaipu_img" style="margin-top:25px;"></div>
+									<div class="restaurant_list_page_dianjiatesecaipu_div1"><img src="images/malaxiangguo.jpg" class="restaurant_list_page_dianjiatesecaipu_img" style="margin-top:0 auto;margin-top:-16px"></div>
 									<div class="restaurant_list_page_dianjiatesecaipu_div2"><h2>麻辣香锅</h2><p>麻辣香锅发源于重庆缙云山，由川渝地方麻辣风味融合而来，麻辣香锅源于土家风味，是当地老百姓的家常做法，以麻、辣、鲜、香、油、混搭为特点。</p></div></a>
 								</div>
 		                    </div>
 		             	</div>
 		            </div>
-                <div class="swiper-scrollbar"></div>     
+                <div class="swiper-scrollbar"></div>
             </div>
-            <div class="swiper-button-prev" style="pasition:absolute;top:770px;left:25%"></div>  
-            <div class="swiper-button-next" style="pasition:absolute;top:770px;left:91%;"></div>
         </div>
     </div>
 
@@ -210,18 +212,22 @@
 	</script>
 	<style type="text/css">
         .swiper-container {
-        width: 85%;
+        width: 95%;
         height: 420px;
         }
         .swiper-button-prev{
-        	width: 7%;
+        	width: 12%;
         	background-image: url(src/images/slide_left.png);
         	background-size: 100%;
+        	margin-left: -30px;
+        	margin-top: -42px;
         }
         .swiper-button-next{
-        	width: 7%;
+        	width: 12%;
         	background-image: url(src/images/slide_right.png);
         	background-size: 100%;
+        	margin-right: -30px;
+        	margin-top: -42px;
         }
         .back-col{
 			background-color: #ADADAD;
