修改了斑马纹

--- a/前台/chat_list.html
+++ b/前台/chat_list.html
@@ -69,7 +69,7 @@
 			<div class="chat_list_page_content">
 				<div class="chat_list_page_left">
 					<button class="am-icon-plus" style="border-radius:5px;">&nbsp;&nbsp;发帖&nbsp;&nbsp;</button>
-					<ul class="am-list am-list-border am-list-striped am-list-static">
+					<ul class="am-list am-list-border am-list-static">
 						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-----------------------------------------------默默&nbsp;</a></li>
 						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-----------------------------------------------默默&nbsp;</a></li>
 						<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-----------------------------------------------默默&nbsp;</a></li>
