修改了per_user文件

--- a/前台/per_user.html
+++ b/前台/per_user.html
@@ -97,7 +97,7 @@
 				<a href="push_post.html"><button style="float:right;color:white;background-color:red;border-radius:10px;">&nbsp;发布新贴&nbsp;</button></a>
 			</div>
 			<div class="per_user_chat">
-				<ul class="am-list am-list-border am-list-striped am-list-static" style="padding-top:10px;">
+				<ul class="am-list am-list-border am-list-static" style="padding-top:10px;">
 					<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-------------------------------------------------------------------------------2016-12-1&nbsp;</a></li>
 					<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-------------------------------------------------------------------------------2016-12-1&nbsp;</a></li>
 					<li><a href="chat_content.html">&nbsp;宫保鸡丁好好吃233-------------------------------------------------------------------------------2016-12-1&nbsp;</a></li>
