修改了recipe_list文件

--- a/前台/recipe_list.html
+++ b/前台/recipe_list.html
@@ -64,20 +64,20 @@
 				<ul class="am-nav recipe_list_page_category_content">
 					<button class="am-btn am-icon-chevron-up recipe_list_page_category_button_up" id="btn-pre"></button>
 					<div style="height:315px;overflow:scroll;overflow-y:hidden" id="flow">
-					<li  class="back-col" onclick="select(this)"><a href="#" style="color:black">家常菜谱</a></li>
-					<li  onclick="select(this)"><a href="#" style="color:black">中华料理</a></li>
-					<li  onclick="select(this)"><a href="#" style="color:black">外国料理</a></li>
-					<li  onclick="select(this)"><a href="#" style="color:black">各地小吃</a></li>
-					<li  onclick="select(this)"><a href="#" style="color:black">烘焙</a></li>
-					<li  onclick="select(this)"><a href="#" style="color:black">糕点</a></li>
-					<li  onclick="select(this)"><a href="#" style="color:black">甜点</a></li>
-					<li  onclick="select(this)"><a href="#" style="color:black">家常菜谱</a></li>
-					<li  onclick="select(this)"><a href="#" style="color:black">中华料理</a></li>
-					<li  onclick="select(this)"><a href="#" style="color:black">外国料理</a></li>
-					<li  onclick="select(this)"><a href="#" style="color:black">各地小吃</a></li>
-					<li  onclick="select(this)"><a href="#" style="color:black">烘焙</a></li>
-					<li  onclick="select(this)"><a href="#" style="color:black">糕点</a></li>
-					<li  onclick="select(this)"><a href="#" style="color:black">甜点</a></li>
+					<li  class="back-col" onclick="select(this)"><a href="javascript:;" style="color:black">家常菜谱</a></li>
+					<li  onclick="select(this)"><a href="javascript:;" style="color:black">中华料理</a></li>
+					<li  onclick="select(this)"><a href="javascript:;" style="color:black">外国料理</a></li>
+					<li  onclick="select(this)"><a href="javascript:;" style="color:black">各地小吃</a></li>
+					<li  onclick="select(this)"><a href="javascript:;" style="color:black">烘焙</a></li>
+					<li  onclick="select(this)"><a href="javascript:;" style="color:black">糕点</a></li>
+					<li  onclick="select(this)"><a href="javascript:;" style="color:black">甜点</a></li>
+					<li  onclick="select(this)"><a href="javascript:;" style="color:black">家常菜谱</a></li>
+					<li  onclick="select(this)"><a href="javascript:;" style="color:black">中华料理</a></li>
+					<li  onclick="select(this)"><a href="javascript:;" style="color:black">外国料理</a></li>
+					<li  onclick="select(this)"><a href="javascript:;" style="color:black">各地小吃</a></li>
+					<li  onclick="select(this)"><a href="javascript:;" style="color:black">烘焙</a></li>
+					<li  onclick="select(this)"><a href="javascript:;" style="color:black">糕点</a></li>
+					<li  onclick="select(this)"><a href="javascript:;" style="color:black">甜点</a></li>
 					</div>
 					<button class="am-btn am-icon-chevron-down recipe_list_page_category_button_down" id="btn-next"></button>
 				</ul>
@@ -406,13 +406,13 @@
 		function select(_this){
 			$("li").removeClass("back-col");
 			if(preLi) preLi.style.cssText="";
-			_this.style.cssText="background-color:#ADADAD";
+			_this.style.cssText="background-color:#D0D0D0";
 			preLi=_this;
 		}
 	</script>
 	<style type="text/css">
 		.back-col{
-			background-color: #ADADAD;
+			background-color: #D0D0D0;
 		}
 		#flow li{
 			height: 15%;
