修改了restaurant_list文件

--- a/前台/restaurant_list.html
+++ b/前台/restaurant_list.html
@@ -70,16 +70,16 @@
 					<button class="am-btn am-icon-chevron-up recipe_list_page_category_button_up" id="btn-pre"></button>
 					<div style="height:250px;overflow:scroll;overflow:hidden" id="flow">
 					<li class="back-col" onclick="select(this)"><a href="#" style="color:black">重庆鸡公煲</a></li>
-					<li onclick="select(this)"><a href="#" style="color:black">麻辣鱼</a></li>
-					<li onclick="select(this)"><a href="#" style="color:black">百度烤肉</a></li>
-					<li onclick="select(this)"><a href="#" style="color:black">春园烤肉王</a></li>
-					<li onclick="select(this)"><a href="#" style="color:black">老酒川菜坊</a></li>
-					<li onclick="select(this)"><a href="#" style="color:black">重庆鸡公煲</a></li>
-					<li onclick="select(this)"><a href="#" style="color:black">麻辣鱼</a></li>
-					<li onclick="select(this)"><a href="#" style="color:black">百度烤肉</a></li>
-					<li onclick="select(this)"><a href="#" style="color:black">春园烤肉王</a></li>
-					<li onclick="select(this)"><a href="#" style="color:black">老酒川菜坊</a></li>
-					<li onclick="select(this)"><a href="#" style="color:black">麻辣香锅</a></li>
+					<li onclick="select(this)"><a href="javascript:;" style="color:black">麻辣鱼</a></li>
+					<li onclick="select(this)"><a href="javascript:;" style="color:black">百度烤肉</a></li>
+					<li onclick="select(this)"><a href="javascript:;" style="color:black">春园烤肉王</a></li>
+					<li onclick="select(this)"><a href="javascript:;" style="color:black">老酒川菜坊</a></li>
+					<li onclick="select(this)"><a href="javascript:;" style="color:black">重庆鸡公煲</a></li>
+					<li onclick="select(this)"><a href="javascript:;" style="color:black">麻辣鱼</a></li>
+					<li onclick="select(this)"><a href="javascript:;" style="color:black">百度烤肉</a></li>
+					<li onclick="select(this)"><a href="javascript:;" style="color:black">春园烤肉王</a></li>
+					<li onclick="select(this)"><a href="javascript:;" style="color:black">老酒川菜坊</a></li>
+					<li onclick="select(this)"><a href="javascript:;" style="color:black">麻辣香锅</a></li>
 					</div>
 					<button class="am-btn am-icon-chevron-down recipe_list_page_category_button_down" id="btn-next"></button>
 				</ul>
@@ -206,7 +206,7 @@
 		function select(_this){
 			$("li").removeClass("back-col");
 			if(preLi) preLi.style.cssText="";
-			_this.style.cssText="background-color:#ADADAD";
+			_this.style.cssText="background-color:#D0D0D0";
 			preLi=_this;
 		}
 	</script>
@@ -230,7 +230,7 @@
         	margin-top: -42px;
         }
         .back-col{
-			background-color: #ADADAD;
+			background-color: #D0D0D0;
 		}
 		#flow li{
 			height: 18%;
