--- a/前台/login_user.html
+++ b/前台/login_user.html
@@ -88,7 +88,7 @@
 					<div class="link_content">
 						<table  width="100%" height="50px">
 							<tr>
-								<td style="width:8.33%;">美食</td>
+								<td style="width:8.33%;"><a href="#" style="color:#E0E0E0">美食</a></td>
 								<td style="width:8.33%;">甜点</td>
 								<td style="width:8.33%;">厨房必备</td>
 								<td style="width:8.33%;">主食</td>
