--- a/前台/push_recipe.html
+++ b/前台/push_recipe.html
@@ -87,22 +87,28 @@
 				<div class="push_recipe_content_jiange" style="font-weight:bold;">食材</div>
 				<textarea style="width:80%;height:100px;"></textarea>
 				<div class="push_recipe_content_jiange" style="font-weight:bold;">步骤</div>
-				<div>
-					<div style="float:left;"><p style="font-size:50px;font-weight:bold;font-style:italic;padding-top:100%;color:gray;">1&nbsp;</p></div>
-					<a href="#"><div style="width:18%;height:150px;border:1px solid gray;float:left;"><p style="font-size:50px;color:black;text-align:center;padding-top:19%;">+</p></div></a>
-					<div style="float:left;"><textarea style="width:650px;height:150px;margin-left:10px;"></textarea></div>
+				<div style="width:100%" id="parentpoint">
+					<div id="Step" style='position: relative;'>
+						<div id="left"><p name="count" id="count">1&nbsp;</p></div>
+						<div id="left-center"><p id="left-center1">+</p></div>
+						<div id="right-center"><textarea id="right-center1"></textarea></div>
+						<div id="remove"><button class="am-close am-close-alt am-close-spin">&times;</button></div>
+					</div>
+					<div id="Step" style='position: relative;'>
+						<div id="left"><p name="count" id="count">2&nbsp;</p></div>
+						<div id="left-center"><p id="left-center1">+</p></div>
+						<div id="right-center"><textarea id="right-center1"></textarea></div>
+						<div id="remove"><button class="am-close am-close-alt am-close-spin">&times;</button></div>
+					</div>
+					<div id="Step" style='position: relative;'>
+						<div id="left"><p name="count" id="count">3&nbsp;</p></div>
+						<div id="left-center"><p id="left-center1">+</p></div>
+						<div id="right-center"><textarea id="right-center1"></textarea></div>
+						<div id="remove"><button class="am-close am-close-alt am-close-spin">&times;</button></div>
+					</div>
 				</div>
-				<div>
-					<div style="float:left;"><p style="font-size:50px;font-weight:bold;font-style:italic;padding-top:100%;color:gray;">2&nbsp;</p></div>
-					<a href="#"><div style="width:18%;height:150px;border:1px solid gray;float:left;"><p style="font-size:50px;color:black;text-align:center;padding-top:19%;">+</p></div></a>
-					<div style="float:left;"><textarea style="width:650px;height:150px;margin-left:10px;"></textarea></div>
-				</div>
-				<div>
-					<div style="float:left;"><p style="font-size:50px;font-weight:bold;font-style:italic;padding-top:100%;color:gray;">3&nbsp;</p></div>
-					<a href="#"><div style="width:18%;height:150px;border:1px solid gray;float:left;"><p style="font-size:50px;color:black;text-align:center;padding-top:19%;">+</p></div></a>
-					<div style="float:left;"><textarea style="width:650px;height:150px;margin-left:10px;"></textarea></div>
-				</div>
-				<p><a href="per_user.html"><button class="push_recipe_content_jiange" style="color:white;background-color:red;border-radius:5px;">&nbsp;&nbsp;提&nbsp;交&nbsp;&nbsp;</button></a></p>
+				<div style="margin-left:6%"><button style="color:white;background-color:gray;width:19%;height:50px" id="remove_univ_0">+增加一步</button></div>
+				<div style="margin-top:2%;"><a href="per_user.html"><button style="color:white;background-color:red;border-radius:5px;width:9%;height:32px">&nbsp;&nbsp;提&nbsp;交&nbsp;&nbsp;</button></a></div>
 			</div>
 		</div>
 
@@ -114,7 +120,7 @@
 					<div class="link_content">
 						<table  width="100%" height="50px">
 							<tr>
-								<td style="width:8.33%;">美食</td>
+								<td style="width:8.33%;"><a href="#" style="color:#E0E0E0">美食</a></td>
 								<td style="width:8.33%;">甜点</td>
 								<td style="width:8.33%;">厨房必备</td>
 								<td style="width:8.33%;">主食</td>
@@ -144,4 +150,75 @@
 			</div>
 		</div>
 	</body>
+	<script>
+    $(document).ready(function(){
+    	$("#remove_univ_0").click(addStick);
+        $("#parentpoint button").click(delet); 
+    });
+    function addStick(){
+    	
+  
+	    var div=$("<div id='Step' style='position: relative;'><div id='left'><p id='count' name='count' value=''>&nbsp;</p></div><div id='remove'><button class='am-close am-close-alt am-close-spin'>&times;</button></div><div id='left-center'><p id='left-center1'>+</p></div><div id='right-center'><textarea id='right-center1'></textarea></div></div>");
+	    $("#parentpoint").append(div);
+	    $("#parentpoint button").unbind("click").bind("click",delet);
+	    var a=new Array();
+	    var a=document.getElementsByName('count');
+        for(var i=0;i<a.length;i++){
+        	b=i+1
+        	a[i].innerHTML=b;
+        }
+    }
+    function delet(){
+        $(this).offsetParent().remove();
+        var a=new Array();
+	    var a=document.getElementsByName('count');
+        for(var i=0;i<a.length;i++){
+        	b=i+1
+        	a[i].innerHTML=b;
+        }
+    }
+</script>
+<style type="text/css">
+        #Step{
+        	width:100%;
+        	height:160px;
+        }
+        #left{
+        	float:left;
+        	width:6%;
+        }
+        #count{
+        	font-size:40px;
+        	font-weight:bold;
+        	font-style:italic;
+        	padding-top:100%;
+        	color:gray;
+        }
+        #remove{
+        	float:right;
+        	margin-top:14%;
+        }
+        #left-center{
+        	width:18%;
+        	height:150px;
+        	border:1px solid gray;
+        	float:left;
+        }
+        #left-center1{
+        	font-size:50px;
+        	color:black;
+        	text-align:center;
+        	padding-top:19%;
+        }
+        #right-center{
+        	float:left;
+        	width:72%;
+        	margin-bottom:10px;
+        }
+        #right-center1{
+        	width:100%;
+        	height:150px;
+        	margin-left:10px;
+        }
+		</style>
 </html>
