--- a/前台/restaurant_content.html
+++ b/前台/restaurant_content.html
@@ -53,8 +53,8 @@
 			<div class="recipe_list_page_bread">
 				<ul class="am-breadcrumb am-breadcrumb-slash">
 					<li><a href="index.html">首页</a></li>
-					<li><a href="restaurant_list.html">店家分享</a></li>
-					<li><a href="restaurant_content.html">黄油曲奇</a></li>
+					<li><a href="recipe_list.html">店家分享</a></li>
+					<li><a href="recipe_content.html">黄油曲奇</a></li>
 				</ul>
 			</div>
 		</div>
@@ -68,72 +68,77 @@
 				<p class="recipe_content_page_content_img_content_p2">工艺：<span>烤</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;口味：<span>甜</span></p>
 				<p class="recipe_content_page_content_img_content_p2">准备时间：<span>30min</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;烹饪时间：<span>25min</span></p>
 				<div>
-					<div class="recipe_content_page_content_img_content_head"><a href="visit_per_restaurant.html"><img src="images/head1.jpg" class="recipe_content_page_content_img_content_head_img am-round"></a></div>
+					<div class="recipe_content_page_content_img_content_head"><a href="visit_per_user.html"><img src="images/head1.jpg" class="recipe_content_page_content_img_content_head_img am-round"></div>
 					<div class="recipe_content_page_content_img_content_head2">
-						<a href="visit_per_restaurant.html"><p class="recipe_content_page_content_img_content_head2_p1">西式糕点（店家）</p></a>
+						<a href="visit_per_user.html"><p class="recipe_content_page_content_img_content_head2_p1">重庆鸡公煲（店家）</p></a>
 						<p class="recipe_content_page_content_img_content_head2_p2">发表于 2016-11-30 12:10:45</p>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="recipe_content_page_cailiao">
-			<p class="recipe_content_page_cailiao_1">用料</p>
-			<p class="recipe_content_page_cailiao_2">高筋面粉100g，鸡蛋30g，黄油100g，糖粉40g，玉米淀粉50g</p>
-		</div>
-		<div class="recipe_content_page_make">
-			<p class="recipe_content_page_cailiao_1">黄油曲奇的做法</p>
-			<hr/>
-			<p class="recipe_content_page_buzhou"><span class="recipe_content_page_num">1.&nbsp;</span>黄油室温充分软化成膏状，加入糖粉打发到颜色变浅，呈羽毛状</p>
-			<img src="images/huangyouquqi1.jpg" style="width:75%;margin-left:7%;">
-			<p class="recipe_content_page_buzhou"><span class="recipe_content_page_num">2.&nbsp;</span>蛋液充分打散变浅，分三次加入，每次加入后用刮刀按压至全部吸收后再加入剩下的蛋液，蛋液全部拌入后的状态</p>
-			<img src="images/huangyouquqi2.jpg" style="width:75%;margin-left:7%;">
-			<p class="recipe_content_page_buzhou"><span class="recipe_content_page_num">3.&nbsp;</span>筛入混合均匀的高筋面粉与淀粉，刮刀按压均匀，不颗粒</p>
-			<img src="images/huangyouquqi3.jpg" style="width:75%;margin-left:7%;">
-			<p class="recipe_content_page_buzhou"><span class="recipe_content_page_num">4.&nbsp;</span>将太阳花裱花嘴装入裱花袋，放入曲奇面糊，挤入不沾烤盘，如果用普通烤盘请垫油纸，烤箱预热200度，烤约15分钟左右</p>
-			<img src="images/huangyouquqi4.jpg" style="width:75%;margin-left:7%;">
-			<p class="recipe_content_page_buzhou"><span class="recipe_content_page_num">5.&nbsp;</span>完成</p>
-			<img src="images/huangyouquqi5.jpg" style="width:75%;margin-left:7%;">
-		</div>
-		<div class="recipe_content_page_commit">
-			<div>
-				<div class="recipe_content_page_commit_img"><img src="images/head1.jpg" class="recipe_content_page_commit_img_image"></div>
-				<div class="recipe_content_page_commit_content"><textarea rows="3" cols="57"></textarea></div>
-				<div class="recipe_content_page_commit_submit"><button style="background-color:red;color:white;border-radius:5px;">提交评论</button></div>
+		<div style="width:1000px;margin:0 auto">
+			<div class="recipe_content_page_cailiao">
+				<p class="recipe_content_page_cailiao_1">用料</p>
+				<p class="recipe_content_page_cailiao_2">高筋面粉100g，鸡蛋30g，黄油100g，糖粉40g，玉米淀粉50g</p>
 			</div>
-			<hr/>
-			<div>
-				<div class="recipe_content_page_commit_1">
-					<div class="recipe_content_page_commit_1_img">
-						<img src="images/head1.jpg" style="width:100%;">
-						<div style="text-align:center;font-size:13px;">三寸阳</div>
-					</div>
-					<div class="recipe_content_page_commit_1_content">
-						<p class="recipe_content_page_commit_1_content_title">不错哦233</p>
-						<p class="recipe_content_page_commit_1_content_time">发表于2016-11-30 16:19:44</p>
-					</div>
+		</div>
+		<div style="width:1000px;margin:0 auto">
+			<div class="recipe_content_page_make">
+				<p class="recipe_content_page_cailiao_1">黄油曲奇的做法</p>
+				<hr/>
+				<p class="recipe_content_page_buzhou"><span class="recipe_content_page_num">1.&nbsp;</span>黄油室温充分软化成膏状，加入糖粉打发到颜色变浅，呈羽毛状</p>
+				<img src="images/huangyouquqi1.jpg" style="width:75%;margin-left:7%;">
+				<p class="recipe_content_page_buzhou"><span class="recipe_content_page_num">2.&nbsp;</span>蛋液充分打散变浅，分三次加入，每次加入后用刮刀按压至全部吸收后再加入剩下的蛋液，蛋液全部拌入后的状态</p>
+				<img src="images/huangyouquqi2.jpg" style="width:75%;margin-left:7%;">
+				<p class="recipe_content_page_buzhou"><span class="recipe_content_page_num">3.&nbsp;</span>筛入混合均匀的高筋面粉与淀粉，刮刀按压均匀，不颗粒</p>
+				<img src="images/huangyouquqi3.jpg" style="width:75%;margin-left:7%;">
+				<p class="recipe_content_page_buzhou"><span class="recipe_content_page_num">4.&nbsp;</span>将太阳花裱花嘴装入裱花袋，放入曲奇面糊，挤入不沾烤盘，如果用普通烤盘请垫油纸，烤箱预热200度，烤约15分钟左右</p>
+				<img src="images/huangyouquqi4.jpg" style="width:75%;margin-left:7%;">
+				<p class="recipe_content_page_buzhou"><span class="recipe_content_page_num">5.&nbsp;</span>完成</p>
+				<img src="images/huangyouquqi5.jpg" style="width:75%;margin-left:7%;">
+			</div>
+		</div>
+		<div style="width:1000px;margin:0 auto">
+			<div class="recipe_content_page_commit">
+				<div>
+					<div class="recipe_content_page_commit_img"><img src="images/head1.jpg" class="recipe_content_page_commit_img_image"></div>
+					<div class="recipe_content_page_commit_content"><textarea rows="3" cols="57"></textarea></div>
+					<div class="recipe_content_page_commit_submit"><button style="background-color:red;color:white;border-radius:5px;">提交评论</button></div>
 				</div>
-				<div class="recipe_content_page_commit_2">
-					<div class="recipe_content_page_commit_1_img">
-						<img src="images/head1.jpg" style="width:100%;">
-						<div style="text-align:center;font-size:13px;">三寸阳</div>
+				<hr/>
+				<div>
+					<div class="recipe_content_page_commit_1">
+						<div class="recipe_content_page_commit_1_img">
+							<img src="images/head1.jpg" style="width:100%;">
+							<div style="text-align:center;font-size:13px;">三寸阳</div>
+						</div>
+						<div class="recipe_content_page_commit_1_content">
+							<p class="recipe_content_page_commit_1_content_title">不错哦233</p>
+							<p class="recipe_content_page_commit_1_content_time">发表于2016-11-30 16:19:44</p>
+						</div>
 					</div>
-					<div class="recipe_content_page_commit_1_content">
-						<p class="recipe_content_page_commit_1_content_title">曲奇预拌粉可以换成蛋糕预拌粉么</p>
-						<p class="recipe_content_page_commit_1_content_time">发表于2016-11-30 16:19:44</p>
+					<div class="recipe_content_page_commit_2">
+						<div class="recipe_content_page_commit_1_img">
+							<img src="images/head1.jpg" style="width:100%;">
+							<div style="text-align:center;font-size:13px;">三寸阳</div>
+						</div>
+						<div class="recipe_content_page_commit_1_content">
+							<p class="recipe_content_page_commit_1_content_title">曲奇预拌粉可以换成蛋糕预拌粉么</p>
+							<p class="recipe_content_page_commit_1_content_time">发表于2016-11-30 16:19:44</p>
+						</div>
 					</div>
-				</div>
-				<div class="recipe_content_page_commit_2">
-					<div class="recipe_content_page_commit_1_img">
-						<img src="images/head1.jpg" style="width:100%;">
-						<div style="text-align:center;font-size:13px;">三寸阳</div>
-					</div>
-					<div class="recipe_content_page_commit_1_content">
-						<p class="recipe_content_page_commit_1_content_title">看着非常棒，ok=.=</p>
-						<p class="recipe_content_page_commit_1_content_time">发表于2016-11-30 16:19:44</p>
+					<div class="recipe_content_page_commit_2">
+						<div class="recipe_content_page_commit_1_img">
+							<img src="images/head1.jpg" style="width:100%;">
+							<div style="text-align:center;font-size:13px;">三寸阳</div>
+						</div>
+						<div class="recipe_content_page_commit_1_content">
+							<p class="recipe_content_page_commit_1_content_title">看着非常棒，ok=.=</p>
+							<p class="recipe_content_page_commit_1_content_time">发表于2016-11-30 16:19:44</p>
+						</div>
 					</div>
 				</div>
 			</div>
-
 		</div>
 
 		<div class="recipe_content_page_link">
@@ -144,7 +149,7 @@
 					<div class="link_content">
 						<table  width="100%" height="50px">
 							<tr>
-								<td style="width:8.33%;">美食</td>
+								<td style="width:8.33%;"><a href="#" style="color:#E0E0E0">美食</a></td>
 								<td style="width:8.33%;">甜点</td>
 								<td style="width:8.33%;">厨房必备</td>
 								<td style="width:8.33%;">主食</td>
@@ -173,6 +178,6 @@
 				</div>
 			</div>
 		</div>
-		<div class="fix"><a href="#top"><img src="images/meishiniang3.png" style="width:180px;"></a></div>
+		<div class="fix"><a href="#top"><img src="images/meishiniang8.png" style="width:180px;"></a></div>
 	</body>
 </html>
